--- a/answers/1/index.html
+++ b/answers/1/index.html
@@ -12,7 +12,7 @@
 <div id="answer">
   <h1>Apple Airpods</h1>
   <p>Цена: 4799 грн</p>
-  <img src="./img/air-pods.png" width="100px">
+  <img src="./img/air-pods.png" width="100px"/>
   <h2>Описание</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
