--- a/answers/2/index.html
+++ b/answers/2/index.html
@@ -10,7 +10,11 @@
 
 <!--ANSWER BLOCK-->
 <div id="answer">
-  Your answer
+  <a href="https://google.com" target="_blank">google.com</a>
+  <br>
+  <a href="../1/index.html">first task</a>
+  <br>
+  <a href="../1/index.html" target="_blank"><img src="../1/img/air-pods.png" width="100px"/></a>
 </div>
 
 <!--QUESTION BLOCK-->
