--- a/answers/3/index.html
+++ b/answers/3/index.html
@@ -10,7 +10,9 @@
 
 <!--ANSWER BLOCK-->
 <div id="answer">
-  Your answer
+  <pre><b>Lorem ipsum dolor sit amet,       consectetur adipiscing elit</b></pre>
+  <pre><i>Lorem ipsum dolor sit amet,       consectetur adipiscing elit</i></pre>
+  <pre><i><b>Lorem ipsum dolor sit amet,       consectetur adipiscing elit</b></i></pre>
 </div>
 
 <!--QUESTION BLOCK-->
