--- a/answers/4/index.html
+++ b/answers/4/index.html
@@ -10,7 +10,23 @@
 
 <!--ANSWER BLOCK-->
 <div id="answer">
-  Your answer
+  
+  <ol type="A" start="B">
+    <li>1</li> 
+      <ol type="i">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ol>  
+    <li>2</li>
+      <ul type="square">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ul>
+    <li>3</li>
+  </ol>
+
 </div>
 
 <!--QUESTION BLOCK-->
