--- a/answers/5/index.html
+++ b/answers/5/index.html
@@ -9,8 +9,31 @@
 <body>
 
 <!--ANSWER BLOCK-->
-<div id="answer">
-  Your answer
+<div id="answer" style="background: #000000; color: #ffffff">
+  <h1 style="background: #ffffff; color: #000000; text-align: center">Apple Airpods</h1>
+  <p>Цена: 4799 грн</p>
+  <img src="./img/air-pods.png" width="100px"/>
+  <h2 style="text-align: center">Описание</h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+  <h2 style="text-align: center">Характеристики</h2>
+  <h3>Производитель</h3>
+  <p>
+    Apple
+  </p>
+  <h3>Тип подключения</h2>
+  <p>
+    Беспроводное
+  </p>
+  <h3>Интерфейс подключения</h2>
+  <p>
+    Lightning
+  </p>
 </div>
 
 <!--QUESTION BLOCK-->
