--- a/answers/1/index.html
+++ b/answers/1/index.html
@@ -14,18 +14,26 @@
   <p>Цена: 4799 грн</p>
   <img src="./img/air-pods.png" width="100px"/>
   <h2>Описание</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
   <h2>Характеристики</h2>
   <h3>Производитель</h3>
-  <p>Apple</p>
-  <h2>Тип подключения</h2>
-  <p>Беспроводное</p>
-  <h2>Интерфейс подключения</h2>
-  <p>Lightning</p>
+  <p>
+    Apple
+  </p>
+  <h3>Тип подключения</h3>
+  <p>
+    Беспроводное
+  </p>
+  <h3>Интерфейс подключения</h3>
+  <p>
+    Lightning
+  </p>
 </div>
 
 <!--QUESTION BLOCK-->
