--- a/answers/6/index.html
+++ b/answers/6/index.html
@@ -10,7 +10,70 @@
 
 <!--ANSWER BLOCK-->
 <div id="answer">
-  Your answer
+  <table border="1">
+    <caption>Test table</caption>
+    <thead style="background-color:silver">
+    <tr>
+      <th>Invoice #123456789</th>
+      <th>14 January 2025</th>
+    </tr>
+    <tr>
+      <td><b>Pay to:</b>
+        <br>
+        Acme Billing Co.
+        <br>
+        123 Main St.
+        <br>
+        Cityville, NA 12345
+      </td>
+      <td><b>Customer</b>
+      <br>
+        John Smith
+        <br>
+        321 Willow Way
+        <br>
+        Southeast Northwestershire, MA 54321
+      </td>
+    </tr>
+  </thead>
+  <tbody style="background-color:khaki">
+    <tr>
+      <th>Name / Description</th>
+      <th>Qty</th>
+      <th>@</th>
+      <th>Cost</th>
+    </tr>
+    <tr>
+      <td>Paperclips</td>
+      <td>1000</td>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot style="background-color:coral">
+    <tr>
+      <th>Name / Description</th>
+      <th>14 January 2025</th>
+    </tr>
+    <tr>
+      <td><b>Pay to:</b>
+        <br>
+        Acme Billing Co.
+        <br>
+        123 Main St.
+        <br>
+        Cityville, NA 12345
+      </td>
+      <td><b>Customer</b>
+      <br>
+        John Smith
+        <br>
+        321 Willow Way
+        <br>
+        Southeast Northwestershire, MA 54321
+      </td>
+    </tr>
+  </tfoot>
+  </table>
 </div>
 
 <!--QUESTION BLOCK-->
