--- a/answers/6/index.html
+++ b/answers/6/index.html
@@ -39,38 +39,29 @@
   <tbody style="background-color:khaki">
     <tr>
       <th>Name / Description</th>
-      <th>Qty</th>
-      <th>@</th>
-      <th>Cost</th>
+      <th>Qty.</th>
+     
     </tr>
     <tr>
       <td>Paperclips</td>
       <td>1000</td>
+    
       </td> 
     </tr>
   </tbody>
   <tfoot style="background-color:coral">
     <tr>
-      <th>Name / Description</th>
-      <th>14 January 2025</th>
+      <th>Subtotal</th>
+      <td>110.00</td>
     </tr>
     <tr>
-      <td><b>Pay to:</b>
-        <br>
-        Acme Billing Co.
-        <br>
-        123 Main St.
-        <br>
-        Cityville, NA 12345
-      </td>
-      <td><b>Customer</b>
-      <br>
-        John Smith
-        <br>
-        321 Willow Way
-        <br>
-        Southeast Northwestershire, MA 54321
-      </td>
+      <th>Tax</th>
+      <td>8%</td>
+      <td>8.80</td>
+    </tr>
+    <tr>
+      <th>Grand Total</th>
+      <td>$ 118.80</td>
     </tr>
   </tfoot>
   </table>
