--- a/answers/6/index.html
+++ b/answers/6/index.html
@@ -14,11 +14,11 @@
     <caption>Test table</caption>
     <thead style="background-color:silver">
     <tr>
-      <th>Invoice #123456789</th>
+      <th colspan="3">Invoice #123456789</th>
       <th>14 January 2025</th>
     </tr>
     <tr>
-      <td><b>Pay to:</b>
+      <td colspan="2"><b>Pay to:</b>
         <br>
         Acme Billing Co.
         <br>
@@ -26,7 +26,7 @@
         <br>
         Cityville, NA 12345
       </td>
-      <td><b>Customer</b>
+      <td colspan="2"><b>Customer</b>
       <br>
         John Smith
         <br>
@@ -40,27 +40,34 @@
     <tr>
       <th>Name / Description</th>
       <th>Qty.</th>
-     
+      <th>@</th>
+      <th>Cost</th>
     </tr>
     <tr>
       <td>Paperclips</td>
       <td>1000</td>
-    
-      </td> 
+      <td>0.01</td>
+      <td>10.00</td> 
+    </tr>
+    <tr>
+      <td>Staples (box)</td>
+      <td>100</td>
+      <td>1.00</td>
+      <td>100.00</td> 
     </tr>
   </tbody>
   <tfoot style="background-color:coral">
     <tr>
-      <th>Subtotal</th>
+      <th colspan="3">Subtotal</th>
       <td>110.00</td>
     </tr>
     <tr>
-      <th>Tax</th>
+      <th colspan="2">Tax</th>
       <td>8%</td>
       <td>8.80</td>
     </tr>
     <tr>
-      <th>Grand Total</th>
+      <th colspan="3">Grand Total</th>
       <td>$ 118.80</td>
     </tr> 
   </tfoot>
